--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/learn-the-word?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=postgres
+spring.datasource.password=vbrcnjg
 
+#liquibase
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:changelog/db.changelog.master.xml
