--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.port=8080
+server.servlet.context-path=/api
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/learn-the-word?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=postgres
 spring.datasource.password=vbrcnjg
