--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password=vbrcnjg
 #liquibase
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:changelog/db.changelog.master.xml
+
+server.error.include-message=always
+#server.error.include-binding-errors=always
